# Fumbler

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cards/: Fumbler.qrc
